firmware/lib/control-table/tests/ui/table_missing_repr_c.stderr
error: Table derive requires #[repr(C)]
  --> tests/ui/table_missing_repr_c.rs:31:8
   |
31 | struct NoReprC {
   |        ^^^^^^^
